--- a/my_site_deployment/blog/templates/blog/about.html
+++ b/my_site_deployment/blog/templates/blog/about.html
@@ -15,7 +15,7 @@
 
 <div class="container">
     <h3>Dr. Ahmed Tareq</h3>
-    <img src="{% static 'blog/images/book.jpg' %}" alt="Dr.Mohamed" class="mx-auto d-block">
+    <img class="img-fluid mx-auto d-block" src="{% static 'blog/images/book.jpg' %}" alt="Dr.Mohamed">
     <p><span><span style="font-weight: bold;">Dr. Ahmed Tareq Kamal Motawi,</span> <br>
         was born and grew up in Cairo, Egypt, specifically in the district of Heliopolis.
     </span></p>
