--- a/my_site_deployment/blog/templates/blog/index.html
+++ b/my_site_deployment/blog/templates/blog/index.html
@@ -16,7 +16,7 @@
   <section id="welcome">
       <header>
           <img src="{% static 'blog/images/book.jpg' %}" alt="Max - The Author Of This Blog">
-          <h2>MAXIM Blog</h2>
+          <h2>Khaled Blog</h2>
       </header>
       <p>Hi i am Khaled this is course for django and i'am attende this course </p>
   </section>
